--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -53,23 +53,23 @@ a:hover {
 
 /* Custom styles for code blocks and other elements */
 .highlight, .literal-block, .code, pre {
-    background-color: #555; /* Slightly brighter dark gray background for code blocks */
+    background-color: #2A303C; /* Darker gray background for code blocks */
     color: #d3d3d3; /* Light gray text color for code blocks */
-    border: 1px solid #666; /* Darker gray border for code blocks */
+    border: 1px solid #d3d3d3; /* Light gray border for code blocks */
 }
 
 table {
-    background-color: #555; /* Slightly brighter dark gray background for tables */
+    background-color: #2A303C; /* Darker gray background for tables */
     color: #d3d3d3; /* Light gray text color for tables */
-    border: 1px solid #666; /* Darker gray border for tables */
+    border: 1px solid #d3d3d3; /* Light gray border for tables */
 }
 
 th, td {
-    border: 1px solid #666; /* Darker gray border for table cells */
+    border: 1px solid #d3d3d3; /* Light gray border for table cells */
 }
 
 .admonition {
-    background-color: #555; /* Slightly brighter dark gray background for admonitions */
+    background-color: #2A303C; /* Darker gray background for admonitions */
     color: #d3d3d3; /* Light gray text color for admonitions */
-    border: 1px solid #666; /* Darker gray border for admonitions */
+    border: 1px solid #d3d3d3; /* Light gray border for admonitions */
 }
