--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -4,7 +4,7 @@ body {
 }
 
 a {
-    color: #d3d3d3; /* Dodger blue color for links */
+    color: #d3d3d3; /* Light gray color for links */
 }
 
 a:hover {
@@ -17,11 +17,17 @@ a:hover {
 
 .wy-nav-side {
     border-right: 1px solid #444; /* Dark gray border for the side navigation */
+    position: fixed; /* Make the sidebar fixed */
+    top: 0;
+    bottom: 0;
+    overflow-y: auto; /* Enable vertical scrolling */
+    width: 300px; /* Set a fixed width for the sidebar */
 }
 
 .wy-nav-content {
     background-color: black; /* Black background for the main content area */
     color: #d3d3d3; /* Light gray text color for the main content area */
+    margin-left: 300px; /* Adjust margin to accommodate fixed sidebar */
 }
 
 .wy-nav-content a {
